--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -6,5 +6,21 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col colLine">
+            <button type="button" class="btn btn-primary btn-sm" onClick="location.href='/posts/save' ">
+                <span class="material-icons">edit</span>
+                글쓰기
+            </button>
+        </div>
+        <div class="col colLine text-end text-danger">
+            로그인처리
+        </div>
+    </div>
+
+
+
+
+
 
 {{>layout/footer}}
