--- a/src/main/resources/templates/posts-save.mustache
+++ b/src/main/resources/templates/posts-save.mustache
@@ -38,11 +38,11 @@
     <div class="row">
         <div class="col colLine text-center">
             <button type="button" class="btn btn-primary btn-sm" id="btn-save">
-                <span class="material-icons text-danger">check_circle</span>
+                <span class="material-icons">check_circle</span>
                 등록
             </button>
             <button type="button" class="btn btn-primary btn-sm" onClick="location.href='/' ">
-                <span class="material-icons text-danger">list_alt</span>
+                <span class="material-icons">list_alt</span>
                 목록
             </button>
         </div>
