--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,6 +12,10 @@ table { border-collapse: collapse;}
     padding-bottom:4px;
 }
 
+.brControl {
+    white-space:pre;
+}
+
 /*
     매우 긴 제목의 글이 작성되었다고 가정하면..
     동해물과 백두산이 ...
